将两个版本osgi文件放在不同目录下
Signed-off-by: wangmengqiang001 <wangmengqiang.hr@gmail.com>

--- a/bridge_container/pom.xml
+++ b/bridge_container/pom.xml
@@ -37,6 +37,12 @@
 			<artifactId>class_launcher</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.crossbridge</groupId> -->
+<!-- 			<artifactId>own.bridge.upgrade</artifactId> -->
+<!-- 			<version>0.0.1-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
 
 <!-- 		<dependency> -->
 <!-- 		<groupId>org.crossbridge</groupId> -->
