--- a/bridge_container/pom.xml
+++ b/bridge_container/pom.xml
@@ -60,6 +60,13 @@
 <!-- 			</exclusions> -->
 <!-- 		</dependency> -->
 
+		<dependency>
+			<groupId>com.ziputil</groupId>
+			<artifactId>ziputils</artifactId>
+			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ziputil.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 
