--- a/bridge_container/pom.xml
+++ b/bridge_container/pom.xml
@@ -38,28 +38,7 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.crossbridge</groupId> -->
-<!-- 			<artifactId>own.bridge.upgrade</artifactId> -->
-<!-- 			<version>0.0.1-SNAPSHOT</version> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 		<groupId>org.crossbridge</groupId> -->
-<!-- 		<artifactId>own.bridge</artifactId> -->
-<!-- 		<version>0.0.1-SNAPSHOT</version> -->
-<!-- 		<exclusions> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.eclipse.platform</groupId> -->
-<!-- 					<artifactId>org.eclipse.equinox.servletbridge</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 				<exclusion> -->
-<!-- 				  <groupId>org.eclipse.platform</groupId> -->
-<!-- 				  <artifactId>org.eclipse.osgi</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 			</exclusions> -->
-<!-- 		</dependency> -->
-
+		
 		<dependency>
 			<groupId>com.ziputil</groupId>
 			<artifactId>ziputils</artifactId>
@@ -67,10 +46,46 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ziputil.jar</systemPath>
 		</dependency>
-	</dependencies>
 
+	</dependencies>
+    
 
 	<build>
 		<finalName>brige_container</finalName>
+		<plugins>
+		    <plugin>  
+	            <groupId>org.apache.maven.plugins</groupId>  
+	            <artifactId>maven-dependency-plugin</artifactId>  
+	            <version>2.8</version>  
+	            <executions>  
+	                <execution>  
+	                    <phase>prepare-package</phase>  
+	                    <goals>  
+	                        <goal>copy</goal>  
+	                    </goals>
+	                    <configuration>
+	                        <artifactItems>
+	                            <artifactItem>
+	                                <groupId>org.crossbridge</groupId>
+									<artifactId>osgi-engine-3.5.1</artifactId>
+									<version>1.0.0</version>
+									<type>zip</type>
+									<!-- to src instead of target, otherwise it won't be deployed while running in IDE -->
+						            <outputDirectory>${basedir}/src/main/webapp/WEB-INF/engine</outputDirectory>
+	                            </artifactItem>
+	                            <artifactItem>
+									 <groupId>org.crossbridge</groupId>
+									 <artifactId>osgi-engine-3.12.100</artifactId>
+									 <version>1.0.0-SNAPSHOT</version>
+									 <type>zip</type>
+						            <outputDirectory>${basedir}/src/main/webapp/WEB-INF/engine</outputDirectory>
+	                            </artifactItem>
+	                        </artifactItems>
+                    </configuration>
+	                      
+	                </execution>  
+	            </executions>  
+	        </plugin>		
+		</plugins>
 	</build>
 </project>
